[gd_scene load_steps=2 format=3 uid="uid://dlrtl565cb3a8"]

[ext_resource type="Script" path="res://scenes/GameScene/objetos/Magia/magia.gd" id="1_vjnnu"]

[node name="Magia" type="Node2D"]
script = ExtResource("1_vjnnu")

[node name="Panel" type="Panel" parent="."]
offset_right = 215.0
offset_bottom = 85.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 215.0
offset_bottom = 86.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Magia"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label_Nivel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "2"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "...."
horizontal_alignment = 1

[node name="Label_Proximo_Nivel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "3"
horizontal_alignment = 2
